[package]
name = "csci320-swim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.8"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14"
uart_16550 = "0.2.0"
pic8259 = "0.10"
pc-keyboard = "0.5"
pluggable_interrupt_os = "0.4"
ramdisk = {git = "https://github.com/gjf2a/ramdisk"}
#my_file_system_repo = {git = "https://github.com/my_userid/my_file_system_repo"}
simple_interp = {git = "https://github.com/gjf2a/simple_interp"}
#my_heap_repo = {git = "https://github.com/my_userid/my_heap_repo"}

[dependencies.num]
version = "0.4"
default-features = false

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies.crossbeam]
version = "0.8"
default-features = false